# mit2680

./: .gitignore  CMakeLists.txt  clean.sh  cleansimen.sh
missions/alder/: alder_lab4.bhv  alder_lab4.moos
missions/lab_07/alpha_return_now/: alpha.moos
missions/lab_07/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_07/bravo_loiter_db1/: bravo1.bhv  bravo1.moos
missions/lab_07/bravo_loiter_uuv/: bravo1.bhv  bravo1.moos
missions/lab_07/bravo_uuv_surface/: bravo1.bhv
missions/lab_08/alpha_bravo_pshare/: alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_08/alpha_pshare/: .LastOpenedMOOSLogDirectory  alpha.moos  shoreside.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_CircleSearch.cpp  BHV_CircleSearch.h  BHV_GradTrack.cpp  BHV_GradTrack.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_SimpleWaypoint.cpp  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/pCommunicationAngle/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  CommunicationAngle.cpp  CommunicationAngle.h  CommunicationAngle_Info.cpp  CommunicationAngle_Info.h  Line.cpp  Line.h  Point.cpp  main.cpp  pCommunicationAngle.moos  pCommunicationAngleTest.moos  testLine.cpp
src/pFrontEstimate/: CMakeLists.txt  FrontEstimateX.cpp  FrontEstimateX.h  pFrontEstimateX.moos  pFrontEstimateXMain.cpp
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  Point.cpp  Point.h  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
src/pPrimeFactor/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  PrimeEntry.cpp  PrimeEntry.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos
src/pXRelayTest/: testXrelay.moos
src/uFldHazardMgrX/: Classification.cpp  Classification.h  HazardMgr.cpp  HazardMgr.h
(+84 files in other folders)
